[package]
name = "poelauncher"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.7", features = ["derive"] }
sysinfo = "0.28.0"

[dependencies.confy]
version = "0.5.1"
features = ["yaml_conf"]
default-features = false

[dependencies.serde]
version = "^1.0"
features = ["derive"]
