[package]
name = "poelauncher"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.22", features = ["derive"] }
sysinfo = "0.29.8"

[dependencies.confy]
version = "0.5.1"
features = ["yaml_conf"]
default-features = false

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[profile.release]
lto = true
codegen-units = 1
strip = true
